--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx"
+  },
+  "paths": {
+    "react": ["./node_modules/react"],
+    "react-dom": ["./node_modules/react-dom"],
   },
   "include": [
     "src"
